Crash in Edit Mode with non-manifold meshes when autosmooth is enabled and set to exactly 180º #90421

Closed
opened 2021-08-04 09:03:20 +02:00 by Lopo Isaac · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA Quadro P5200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-03 20:35, hash: fb87d236ed
Worked: (newest version of Blender that worked as expected)
Caused by 39b2a7bb7e

Short description of error
Blender crashes in Edit Mode when:

  1. The autosmooth checkbox in Properties > Object Data Properties > Normals > Auto Smooth is enabled and set exactly to 180º (the deafault 30º value or 179º work and don't crash Blender)
  2. An operation like inset, bevel, etc is used on a non-manifold mesh (like a plane or any other non-clossed geometry).

Exact steps to reproduce the error

  • open .blend file
  • Use bevel tool on the selected face (crash)

Test File:
#90421.blend

Blender 2021-08-04 16-27-48.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA Quadro P5200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-03 20:35, hash: `fb87d236ed` Worked: (newest version of Blender that worked as expected) Caused by 39b2a7bb7e **Short description of error** Blender crashes in Edit Mode when: 1. The autosmooth checkbox in `Properties > Object Data Properties > Normals > Auto Smooth` is enabled and set exactly to 180º (the deafault 30º value or 179º work and **don't crash** Blender) 2. An operation like inset, bevel, etc is used on a non-manifold mesh (like a plane or any other non-clossed geometry). **Exact steps to reproduce the error** - open .blend file - Use bevel tool on the selected face (crash) Test File: [#90421.blend](https://archive.blender.org/developer/F10264488/T90421.blend) [Blender 2021-08-04 16-27-48.mp4](https://archive.blender.org/developer/F10264984/Blender_2021-08-04_16-27-48.mp4)
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Can confirm on current master.

Not sure but possibly caused by 39b2a7bb7e.
Will double check.

Can confirm on current master. Not sure but possibly caused by 39b2a7bb7e. Will double check.
Campbell Barton self-assigned this 2021-08-04 10:31:09 +02:00

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I can't actually redo the problem.

Please give exact steps to redo the bug.

I can't actually redo the problem. Please give exact steps to redo the bug.
Member

Hi @ideasman42 , updated the task description.

Also, tested again with updated master add719e31aa7d5668fd33cb1a1e02417a334be97. Can still reproduce.

Hi @ideasman42 , updated the task description. Also, tested again with updated master `add719e31aa7d5668fd33cb1a1e02417a334be97`. Can still reproduce.

This issue was referenced by 26c2c617b4

This issue was referenced by 26c2c617b468ee2900f584b0ec0c82dfd632849a

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90421
No description provided.