Fix T90421: edit-mode auto-smooth crash when angle set to 180degrees

Error in 39b2a7bb7e815e051348bf5c5ec777d091324164
which failed to set edge flags with single threaded calculation,
used for low poly models.